# icpc-2022-online-challenge-2

./: .gitignore  CMakeLists.txt  README.md
results/: local_runner.py  overview.tmpl.html  run.py
results/input/: 01  03  06  08
scripts/: run.py
scripts/input/: 02  04  05  07  09  10  11
src/: v01.cpp  v02.cpp  v03.cpp  v04.cpp  v05.cpp  v06.cpp  v07.cpp  v08.cpp  v09.cpp  v10.cpp
