cmake_minimum_required(VERSION 3.16)
project(icpc-2022-online-challenge-2)

set(CMAKE_CXX_STANDARD 20)

add_definitions(-DLOCAL)

add_executable(v01 src/v01.cpp)
add_executable(v02 src/v02.cpp)
add_executable(v03 src/v03.cpp)
add_executable(v04 src/v04.cpp)
add_executable(v05 src/v05.cpp)
add_executable(v06 src/v06.cpp)
add_executable(v07 src/v07.cpp)
add_executable(v08 src/v08.cpp)
add_executable(v09 src/v09.cpp)
add_executable(v10 src/v10.cpp)
